Fixed plugin selector dropdown overflow

--- a/packages/perspective-viewer/src/less/viewer.less
+++ b/packages/perspective-viewer/src/less/viewer.less
@@ -423,6 +423,7 @@
     #vis_selector_container {
         min-height: 29px;
         margin-left: var(--column_selector--width, 20px);
+        overflow: hidden;
     }
     #vis_selector {
         flex-grow: 1;
